CHANGES.txt - 2011-08-05
------------------------

CHANGES IN CUPS V1.5.1

	- Documentation updates (STR #3885)
	- "PAGE: total NNN" messages did not get logged properly (STR #3887)
	- Updated the PWG Raster support to conform to the current draft of the
	  PWG Raster Format specification.
	- The PWG Raster filter did not always write the correct number of
	  padding lines on the bottom of the page (STR #3904)
	- When reporting a denial-of-service attack from the domain socket, the
	  address reported does not always contain the correct path (STR #3888)
	- Badly formed GIF files could cause the image filters to crash
	  (STR #3914)
	- Jobs canceled at the printer were retried by the IPP backend.
	- "cupsfilter -u" deleted the input file instead of the PPD file.
	- The scheduler did not compute the cost of PPD filters defined using
	  the cupsFilter2 keyword properly.
	- The scheduler did not correctly support the maxsize() attribute for
	  PPD filters.


CHANGES IN CUPS V1.5.0

	- Documentation updates.
	- Localization update (STR #3865)
	- Needed to limit TLS to v1.0 on some versions of Mac OS X.
	- The snmp backend did not work with some printers.


CHANGES IN CUPS V1.5rc1

	- Compile fixes (STR #3849, STR #3850)
	- The scheduler didn't check for empty values for several configuration
	  directives (STR #3861)
	- ipptool didn't generate valid XML when a test was skipped.
	- Added additional error checking to the 1284 device ID code (STR #3858)
	- Fixed some compatibility issues migrating from the old usblp backend
	  to the libusb backend (STR #3860)
	- Fixed the wake-from-sleep printing behavior on Mac OS X.
	- The scheduler incorrectly allowed jobs to be held from a terminating
	  state.
	- The cups-driverd program could crash when a PPD was renamed.
	- The dnssd backend took too long to discover printers on large or busy
	  networks with the new default timeout used by lpinfo and the web
	  interface. This resulted in "lost" printers.


CHANGES IN CUPS V1.5b2
