@@ -349,9 +349,10 @@ cupsImageOpen(
   * Load the image as appropriate...
   */
 
-  img->max_ics = CUPS_TILE_MINIMUM;
-  img->xppi    = 128;
-  img->yppi    = 128;
+  img->cachefile = -1;
+  img->max_ics   = CUPS_TILE_MINIMUM;
+  img->xppi      = 128;
+  img->yppi      = 128;
 
   if (!memcmp(header, "GIF87a", 6) || !memcmp(header, "GIF89a", 6))
     status = _cupsImageReadGIF(img, fp, primary, secondary, saturation, hue,
